# ai-training-arena

./: .gitignore  CLAUDE.md  README.md  patch_bridge.py  patch_bridge2.py  start-arena.sh
ai-training-arena-frontend/: Cargo.toml  Dioxus.toml
ai-training-arena-frontend/assets/: index.html
ai-training-arena-frontend/src/: lib.rs  main.rs  routes.rs
ai-training-arena-frontend/src/api/: contracts.rs  mod.rs  node_api.rs  ws_client.rs
ai-training-arena-frontend/src/components/: agent_card.rs  app_shell.rs  battle_detail_modal.rs  battle_grid.rs  battle_slot.rs  class_filter_tabs.rs  dao_portal.rs  data_listing_card.rs  data_marketplace.rs  elo_chart.rs  error_boundary.rs  leaderboard.rs  leaderboard_row.rs  list_data_modal.rs  mod.rs  nav_bar.rs  nft_purchase_modal.rs  node_status_bar.rs  proposal_card.rs  round_timer.rs  staking_panel.rs  stats_dashboard.rs  vote_modal.rs  wallet_connect.rs  wallet_dashboard.rs  wata_license_panel.rs
ai-training-arena-frontend/src/components/ico/: funds_raised_bar.rs  mod.rs  (+4 more)
ai-training-arena-frontend/src/pages/: battles.rs  dashboard.rs  governance.rs  home.rs  ico.rs  marketplace.rs  mint.rs  mod.rs  settings.rs  staking.rs
ai-training-arena-frontend/src/state/: app_state.rs  battle_state.rs  mod.rs  wallet.rs  wallet_state.rs
ai-training-arena-frontend/src/types/: agent.rs  battle.rs  leaderboard.rs  marketplace.rs  mod.rs  wallet.rs
ai-training-arena-frontend/src/utils/: formatting.rs  mod.rs  web3.rs
ai-training-arena-frontend/src/wasm_security/: csp.rs  input_validator.rs  integrity.rs  mod.rs  rate_limiter.rs
(+190 files in other folders)
