[package]
name = "ai-training-arena-frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-training-arena-frontend"
path = "src/main.rs"

[lib]
name = "ai_training_arena_frontend"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "console",
  "EventTarget",
  "MessageEvent",
  "WebSocket",
  "BinaryType",
  "CloseEvent",
  "ErrorEvent",
  "Storage",
  "Navigator",
  "Crypto",
  "Location",
]

[profile.release]
opt-level = "s"
